--- a/notebooks/02_Descriptive_Stats.ipynb
+++ b/notebooks/02_Descriptive_Stats.ipynb
@@ -176,7 +176,7 @@
       "source": [
         "# 2. Monster Sightings 👹\n",
         "\n",
-        "Explore which monsters are most common, top areas, and probabilities."
+        "Explore which monsters are most common and top areas."
       ],
       "metadata": {
         "id": "QTXSO-lBSQXX"
